# sucharu

./: .gitignore  LICENSE  Makefile  README.md  generate-themes.py  index.html  meson.build  meson_options.txt  test-sucharu  update-variations.py
.github/workflows/: open-pr-on-changes.yaml
Mint-Y-Colors/: Sucharu-Variations-NEW.txt
cinnamon-shell/: meson.build
cinnamon-shell/src/: 22_sucharu-artwork.styles  README.md  cinnamon-shell.scss.in  colorable-assets.txt  meson.build
cinnamon-shell/src/cinnamon-shell-sass/: _colors.scss  _tweaks.scss
cinnamon-shell/src/sass/: _colors.scss  _palette.scss  _tweaks.scss
cinnamon-shell/upstream/: cinnamon-shell-sync.sh
cinnamon-shell/upstream/sass/: _common.scss
common/: accent-colors.scss.in  colorize-dummy-svg.py  meson.build  sucharu-colors-defs.scss
debian/: changelog  control  copyright  files  rules  sucharu-theme-cinnamon-shell.install  sucharu-theme-gnome-shell.alternatives  sucharu-theme-gnome-shell.install  sucharu-theme-gtk.install  sucharu-theme-plank.install  sucharu-theme-unity.install  sucharu-theme-xfwm4.install  sucharu-themes.install
files/: meson.build
gnome-shell/src/: gnome-shell.scss.in  meson.build
gnome-shell/src/data/: gnome-shell-theme.gresource.xml
gnome-shell/src/gnome-shell-sass/: _colors.scss  _palette.scss  _sucharu-default-colors.scss  _tweaks.scss  _yaru-colors.scss
gnome-shell/src/sass/: _colors.scss  _high-contrast-colors.scss  _palette.scss  _sucharu-colors.scss
gtk/: meson.build
gtk/src/: accent-colors-list.md  constants.py  index.theme.in  install-thumbnail.py  install_thumbnail.py  meson.build  post_install.py  render_assets.py  update-variations.py
gtk/src/data/: gtk-darker.css.in  gtk.gresource.xml.in
gtk/src/default/: render-assets.sh
gtk/src/default/gtk-2.0/: gtkrc  gtkrc-dark  gtkrc-darker  tweaks,rc
gtk/src/default/gtk-3.0/: README.md  gtk-dark.scss  gtk-darker.scss  gtk.scss  render-assets.sh
gtk/src/default/gtk-3.0/sass/: _colors-public.scss  _colors.scss  _sucharu-colors.scss  _tweaks.scss
gtk/src/default/gtk-3.0/sass/tweak-apps/: _budgie.scss  _gnome-3.22.scss  _mate.scss  _misc.scss  _nemo.scss  _tweak-applications.scss  _tweak-common.scss  _tweak-drawing.scss  _tweak-lightdm.scss
gtk/src/default/gtk-4.0/: gtk-dark-darker.scss  gtk-dark.scss  gtk-darker.scss  gtk.scss
gtk/src/default/gtk-4.0/sass/: _colors-public.scss  _colors.scss  _sucharu-colors.scss  _tweaks.scss
gtk/src/default/gtk-4.0/sass/tweak-apps/: _tweak-common.scss  _tweak-drawing.scss
metacity/src/: meson.build
plank/: meson.build
plank-themes/Sucharu/: dock.theme
plank-themes/Sucharu-Aqua/: dock.theme
plank-themes/Sucharu-Blue/: dock.theme
plank-themes/Sucharu-Brown/: dock.theme
plank-themes/Sucharu-Dark/: dock.theme
plank-themes/Sucharu-Dark-Aqua/: dock.theme
plank-themes/Sucharu-Dark-Blue/: dock.theme
plank-themes/Sucharu-Dark-Brown/: dock.theme
plank-themes/Sucharu-Dark-Grey/: dock.theme
plank-themes/Sucharu-Dark-Orange/: dock.theme
plank-themes/Sucharu-Dark-Pink/: dock.theme
plank-themes/Sucharu-Dark-Purple/: dock.theme
plank-themes/Sucharu-Dark-Red/: dock.theme
plank-themes/Sucharu-Dark-Sand/: dock.theme
plank-themes/Sucharu-Dark-Teal/: dock.theme
plank-themes/Sucharu-Dark-Yellow/: dock.theme
plank-themes/Sucharu-Grey/: dock.theme
plank-themes/Sucharu-Orange/: dock.theme
plank-themes/Sucharu-Pink/: dock.theme
plank-themes/Sucharu-Purple/: dock.theme
plank-themes/Sucharu-Red/: dock.theme
plank-themes/Sucharu-Sand/: dock.theme
plank-themes/Sucharu-Teal/: dock.theme
plank-themes/Sucharu-Yellow/: dock.theme
plank/src/: dock.theme.in  meson.build  rename-plank-theme.sh
src/Mint-Y/: build-themes.py  index.theme  index.theme-dark  index.theme-darker  render-assets.sh
src/Mint-Y/cinnamon/: cinnamon-dark.css  cinnamon.css
src/Mint-Y/cinnamon/sass/: _colors.scss  _common.scss  _panel.scss  _tweaks.scss  cinnamon-dark.scss  cinnamon.scss
src/Mint-Y/gtk-2.0/: gtkrc-darker  render-assets.sh  render-dark-assets.sh
src/Mint-Y/gtk-3.0/: gtk-dark.css  gtk-darker.css  gtk.css  parse-sass.sh  render-assets.sh
src/Mint-Y/gtk-3.0/sass/: _applications.scss  _colors-public.scss  _colors.scss  _common.scss  _drawing.scss  _lightdm.scss  _tweaks.scss  gtk-dark.scss  gtk-darker.scss  gtk.scss
src/Mint-Y/gtk-3.0/sass/tweak-apps/: _lightdm.scss  _nemo.scss  _tweak-applications.scss  _tweak-common.scss  _tweak-drawing.scss  _tweak-unity.scss
src/Mint-Y/gtk-4.0/sass/: _tweaks.scss  gtk-dark.scss  gtk-darker.scss  gtk.scss
src/Mint-Y/gtk-4.0/sass/tweak-apps/: _tweak-applications.scss  _tweak-common.scss
src/Mint-Y/metacity-1/: metacity-theme-1-dark.xml  metacity-theme-1.xml  metacity-theme-3-dark.xml  metacity-theme-3.xml
src/Mint-Y/variations/Aqua/cinnamon/sass/: _panel.scss
src/Mint-Y/variations/Blue/cinnamon/sass/: _panel.scss
src/Mint-Y/variations/Blue/gtk-3.0/: assets.txt
src/Mint-Y/variations/Brown/cinnamon/sass/: _panel.scss
src/Mint-Y/variations/Brown/gtk-3.0/: render-assets.sh
src/Mint-Y/variations/Brown/xfwm4-dark/: render-assets.sh
src/Mint-Y/variations/Grey/cinnamon/sass/: _panel.scss
src/Mint-Y/variations/Orange/cinnamon/sass/: _panel.scss
src/Mint-Y/variations/Orange/gtk-2.0/: render-assets.sh
src/Mint-Y/variations/Pink/cinnamon/sass/: _panel.scss
src/Mint-Y/variations/Purple/cinnamon/sass/: _panel.scss
src/Mint-Y/variations/Red/cinnamon/sass/: _panel.scss
src/Mint-Y/variations/Red/gtk-2.0/: render-dark-assets.sh
src/Mint-Y/variations/Sand/cinnamon/sass/: _panel.scss
src/Mint-Y/variations/Teal/cinnamon/sass/: _panel.scss
src/Mint-Y/xfwm4/: render-assets.sh
src/Mint-Y/xfwm4-dark/: render-assets.sh
styles/css-styles/: style.css
